# py-unifi-access

./: .gitignore  .pre-commit-config.yaml  LICENSE  PR_DESCRIPTION.md  README.md  pr-description.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml
tests/: conftest.py  test_client.py  test_models.py  test_websocket.py
unifi_access_api/: __init__.py  __main__.py  cli.py  client.py  const.py  exceptions.py  websocket.py
unifi_access_api/models/: door.py  websocket.py
