[project]
name = "py-unifi-access"
version = "0.1.0"
description = "Async Python client for the UniFi Access local API with WebSocket event support"
authors = [{ name = "imhotep" }]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
cli = [
    "typer>=0.12.0",
]
dev = [
    "typer>=0.12.0",
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=6.0",
    "aioresponses>=0.7",
    "pre-commit>=4.0",
    "mypy>=1.10",
    "ruff>=0.8",
]

[project.scripts]
unifi-access = "unifi_access_api.cli:app"

[project.urls]
Homepage = "https://github.com/imhotep/py-unifi-access"
Repository = "https://github.com/imhotep/py-unifi-access"
Issues = "https://github.com/imhotep/py-unifi-access/issues"

[tool.setuptools.package-data]
unifi_access_api = ["py.typed"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
ignore = [
    "D203",    # 1 blank line required before class docstring
    "D212",    # Multi-line docstring summary should start at the first line
    "D100",    # Missing docstring in public module
    "D104",    # Missing docstring in public package
    "D107",    # Missing docstring in `__init__`
    "D400",    # First line should end with a period
    "D401",    # First line should be in imperative mood
    "D205",    # 1 blank line required between summary line and description
    "D415",    # First line should end with a period, question mark, or exclamation point
    "E501",    # Line too long
    "RUF012",  # Mutable class attributes should be annotated with `typing.ClassVar`
    "PLR0913", # Too many arguments to function call
    "PLR2004", # Magic value used in comparison
]
select = [
    "B",    # flake8-bugbear
    "D",    # flake8-docstrings
    "C4",   # flake8-comprehensions
    "S",    # flake8-bandit
    "F",    # pyflakes
    "FURB", # refurb
    "E",    # pycodestyle
    "W",    # pycodestyle
    "UP",   # pyupgrade
    "I",    # isort
    "PERF", # performance
    "PL",   # pylint
    "RET",  # return rules
    "RUF",  # ruff-specific
    "SIM",  # simplify
]

[tool.ruff.lint.isort]
known-first-party = ["unifi_access_api"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "S101", "S106", "SIM117", "PLC0415", "PLW0108"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["unifi_access_api"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING",
    "@overload",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
